--- a/src/CadpazBundle/Resources/views/Relatorios/origens.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/origens.html.twig
@@ -14,7 +14,7 @@ Total de casos atendidos: {{ total_casos }}<br>
 {#<div style="float: left; width: 30%">#}
 <div>
 {#Casos por tipo:<br>#}
-<table id="tbl_ori" class="display compact">
+<table id="tbl_ori" class="relatorios">
     <thead class="tabela_pequena">
         <tr>
             <th>Encaminhamento</th>
