--- a/src/CadpazBundle/Resources/views/Relatorios/rendas.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/rendas.html.twig
@@ -9,7 +9,7 @@
 
 <div>
 {#Casos por tipo:<br>#}
-<table id="tbl_ori" class="display compact">
+<table id="tbl_ori" class="relatorios">
     <thead class="tabela_pequena">
         <tr>
             <th>Renda</th>
