--- a/src/CadpazBundle/Resources/views/Relatorios/sexos.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/sexos.html.twig
@@ -10,7 +10,7 @@
 {#<div style="float: left; width: 30%">#}
 <div>
 {#Encaminhamentos:<br>#}
-<table id="tbl_sex" class="display compact">
+<table id="tbl_sex" class="relatorios">
     <thead class="tabela_pequena">
         <tr>
             <th>Sexo</th>
