--- a/src/CadpazBundle/Resources/views/Relatorios/cores.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/cores.html.twig
@@ -10,7 +10,7 @@
 
 <div>
 {#Casos por tipo:<br>#}
-<table id="tbl_ori" class="display compact">
+<table id="tbl_ori" class="relatorios">
     <thead class="tabela_pequena">
         <tr>
             <th>Cor</th>
