--- a/src/CadpazBundle/Resources/views/Relatorios/encaminhamentos.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/encaminhamentos.html.twig
@@ -10,7 +10,7 @@
 {#<div style="float: left; width: 30%">#}
 <div>
 {#Encaminhamentos:<br>#}
-<table id="tbl_enc" class="display compact">
+<table id="tbl_enc" class="relatorios">
     <thead class="tabela_pequena">
         <tr>
             <th>Encaminhado para</th>
