--- a/src/CadpazBundle/Resources/views/Relatorios/idades.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/idades.html.twig
@@ -14,7 +14,7 @@
 
 <div>
 
-<table id="tbl_ori" class="display compact">
+<table id="tbl_ori" class="relatorios">
     <thead class="tabela_pequena">
         <tr>
             <th>Idade</th>
