--- a/src/CadpazBundle/Resources/views/User/index.html.twig
+++ b/src/CadpazBundle/Resources/views/User/index.html.twig
@@ -25,7 +25,7 @@
         </thead>
         <tbody>
         {% for entity in entities %}
-            {{entity.enabled? '<tr>' : '<tr class="disabledUser" style="background: #DFDFDF;">'}}
+            {{entity.enabled? '<tr>' : '<tr class="disabledUser" style="background: #DFDFDF; text-decoration:line-through;">'}}
                 {#<td><a href="{{ path('config_user_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>#}
                 <td>{{ entity.username }}</td>
                 <td>{{ entity.nomeCompleto }}</td>
