Removidas informacoes de debug de varios controladores

--- a/src/CadpazBundle/Resources/views/CTPS/new.html.twig
+++ b/src/CadpazBundle/Resources/views/CTPS/new.html.twig
@@ -53,7 +53,7 @@
           url: Routing.generate('pessoa_ctps_new',{'id':{{id}}})
         };
         // bind form using 'ajaxForm' 
-        $('#newCtpsForm').ajaxForm(optionsCtps);
+        $('#newCtpsForm').ajaxForm(optionsCtpsNaoValidar);
         
         
         
