--- a/web/css/7de3aeb_part_1_geral_2.css
+++ b/web/css/7de3aeb_part_1_geral_2.css
@@ -479,7 +479,7 @@ li.active a, li.active a:hover {
     height:     100%;
     width:      100%;
     background: rgba( 255, 255, 255, .8 ) 
-                url('../images/FhHRx.gif')
+                url('../../bundles/cadpaz/images/FhHRx.gif')
                 /*url('http://i.stack.imgur.com/FhHRx.gif')*/
                 50% 50% 
                 no-repeat;
