--- a/web/css/7de3aeb.css
+++ b/web/css/7de3aeb.css
@@ -624,13 +624,6 @@ a:visited{
 }
 
 
-
-
-
-
-
-
-
 /*----- Tabs -----*/
 .tabs {
     width:100%;
@@ -697,10 +690,6 @@ li.active a, li.active a:hover {
 }
 
 
-
-
-
-
 /* Start by setting display:none to make this hidden.
    Then we position it in relation to the viewport window
    with position:fixed. Width, height, top and left speak
@@ -740,10 +729,8 @@ body.loading {
 /* Anytime the body has the loading class, our
    modal element will be visible */
 body.loading .modal {
-    //display: block;
+    /*display: block;*/
 }
-
-
 
 .questionario_secao {
     /*border: 1px dotted;*/
@@ -754,9 +741,6 @@ body.loading .modal {
     /*border: 1px dotted;*/
     /*border-top: 1px solid;*/
 }
-
-
-
 
 textarea {
     resize: none;
