--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -44,7 +44,7 @@
     
     
     
-    <div id="userArea" style="width: 825px;">
+    <div id="userArea" style="width: 825px; font-size: small">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             <div>Olá
                 <a id="userAreaEditLink" href="{{ path('fos_user_profile_edit') }}">
@@ -100,6 +100,7 @@
             
             
         <div class="modal"><!-- Place at bottom of page --><h3>Carregando...</h3></div>
+        
 {% endblock %}
 {% block javascripts %}
     {% javascripts '@CadpazBundle/Resources/public/js/*' %}
